# mlflow-login

./: .gitignore  Makefile  README.md  docker-compose.yaml  push_image.sh  upload_pyfunc.py
html/: index.html
localstack/: create_bucket.sh  init-aws.sh
mlflow/: Dockerfile  dev.env  start_server.sh
nginx/: .htpasswd  Dockerfile  nginx.conf
postgres/: dev.env
service/: Dockerfile  dev.env  pyproject.toml  start_server.sh
service/authenticator/: app_factory.py  wsgi.py
service/authenticator/src/: config.py
service/authenticator/src/adapters/: repository.py
service/authenticator/src/domain/: model.py
service/authenticator/src/entrypoint/: __init__.py  views.py
service/authenticator/src/service_layer/: sessions.py  users.py  validators.py
service/tests/: conftest.py
service/tests/e2e/: test_views.py
service/tests/integration/: test_repository.py
service/tests/unit/: test_users.py
