[project]
name = "authenticator"
version = "1.0.0"
dependencies = [
    "flask",
    "Flask-HTTPAuth",
    "pytest",
    "gunicorn",
    "boto3",
    "icecream",
    "requests",
    "bcrypt",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["authenticator/src"]
testpaths = "tests"
addopts = "-v"

[project.scripts]
launch-madi = "madi.__main__:start_server"

[tool.setuptools.package-data]
"madi.src.static" = ["*.csv", "*.a3m", "*.json", "*.pdb"]