[project]
name = "authenticator"
version = "1.0.0"
dependencies = [
    "flask",
    "Flask-HTTPAuth",
    "pytest",
    "gunicorn",
    "boto3",
    "icecream",
    "requests",
    "bcrypt",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["authenticator/src"]
testpaths = "tests"
addopts = "-v"